adapted to colab

--- a/TUTO_task_Auto_Tagging.ipynb
+++ b/TUTO_task_Auto_Tagging.ipynb
@@ -15,6 +15,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/geoffroypeeters/DL101forMIR_notebook.git\n",
+    "%cd DL101forMIR_notebook\n",
+    "!ls"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -87,11 +98,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "pre = 'https://drive.google.com/uc?export=download&id='\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/gtzan-genre_audio.hdf5', 'gtzan-genre_audio.hdf5')\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/gtzan-genre.pyjama', 'genre.pyjama')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
+    "#ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
+    "ROOT = './'\n",
+    "\n",
     "base = 'gtzan-genre'\n",
     "hdf5_audio_file = f'{ROOT}/{base}_audio.hdf5'\n",
     "pyjama_annot_file = f'{ROOT}/{base}.pyjama'\n",
