--- a/TUTO_task_Cover_Song_Identification.ipynb
+++ b/TUTO_task_Cover_Song_Identification.ipynb
@@ -22,6 +22,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/geoffroypeeters/DL101forMIR_notebook.git\n",
+    "%cd DL101forMIR_notebook\n",
+    "!ls"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,13 +101,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "pre = 'https://drive.google.com/uc?export=download&id='\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000_feat.hdf5', 'cover1000_feat.hdf5')\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000.pyjama', 'cover1000.pyjama')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
-    "#base = 'cover1000'\n",
-    "base = 'datacos-benchmark'\n",
+    "#ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
+    "ROOT = './'\n",
+    "\n",
+    "base = 'cover1000'\n",
+    "#base = 'datacos-benchmark'\n",
     "hdf5_feat_file = f'{ROOT}/{base}_feat.hdf5'\n",
     "pyjama_annot_file = f'{ROOT}/{base}.pyjama'\n",
     "\n",
