--- a/TUTO_task_Multi_Pitch_Estimation.ipynb
+++ b/TUTO_task_Multi_Pitch_Estimation.ipynb
@@ -14,6 +14,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!git clone https://github.com/geoffroypeeters/DL101forMIR_notebook.git\n",
+    "#%cd DL101forMIR_notebook\n",
+    "#!ls"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,10 +52,12 @@
     "import torch.optim as optim\n",
     "import torchsummary\n",
     "\n",
+    "! pip install lightning\n",
     "import lightning.pytorch as pl\n",
     "from lightning.pytorch.callbacks import Callback\n",
     "from lightning.pytorch.callbacks import EarlyStopping, ModelCheckpoint\n",
     "\n",
+    "! pip install wandb\n",
     "import wandb\n",
     "from pytorch_lightning.loggers import WandbLogger\n",
     "\n",
@@ -69,7 +82,11 @@
     "\n",
     "from argparse import Namespace\n",
     "! pip install munch\n",
-    "from munch import munchify\n"
+    "from munch import munchify\n",
+    "\n",
+    "# -----------------------------\n",
+    "! pip install mir_eval\n",
+    "import mir_eval"
    ]
   },
   {
@@ -81,11 +98,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "pre = 'https://drive.google.com/uc?export=download&id='\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/bach10_audio.hdf5', 'bach10_audio.hdf5')\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/bach10.pyjama', 'bach10.pyjama')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
+    "#ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
+    "ROOT = './'\n",
+    "\n",
     "base, do_f0_annot_frame1_segment2 = 'bach10', 1\n",
     "#base, do_f0_annot_frame1_segment2 = 'maps', 2\n",
     "hdf5_audio_file = f'{ROOT}/{base}_audio.hdf5'\n",
@@ -1202,7 +1233,7 @@
     "\n",
     "        if batch_idx==0: \n",
     "            data_image = np.hstack( (batch['y'][0,:,:].cpu().numpy(),  nn.Sigmoid()(hat_y[0,0,:,:].detach()).cpu().numpy() ) )\n",
-    "            wandb.log({'val3/f0': wandb.Image( data_image )})\n",
+    "            #wandb.log({'val3/f0': wandb.Image( data_image )})\n",
     "        \n",
     "    def configure_optimizers(self):\n",
     "        optimizer = optim.Adam(self.parameters(), 0.001)\n",
@@ -1476,7 +1507,8 @@
     "my_lighting = PitchLigthing(model)\n",
     "early_stop_callback = EarlyStopping(monitor=\"valid_loss\", patience=10, verbose=True, mode=\"min\")\n",
     "checkpoint_callback = ModelCheckpoint(monitor='valid_loss', dirpath=param_lightning.dirpath, filename=param_lightning.filename, save_top_k=1, mode='min')\n",
-    "trainer = pl.Trainer(accelerator=\"gpu\",  logger = wandb_logger, max_epochs = param_lightning.max_epochs, callbacks = [early_stop_callback, checkpoint_callback])\n",
+    "#trainer = pl.Trainer(accelerator=\"gpu\",  logger = wandb_logger, max_epochs = param_lightning.max_epochs, callbacks = [early_stop_callback, checkpoint_callback])\n",
+    "trainer = pl.Trainer(accelerator=\"gpu\",  max_epochs = param_lightning.max_epochs, callbacks = [early_stop_callback, checkpoint_callback])\n",
     "trainer.fit(model=my_lighting, train_dataloaders=train_loader, val_dataloaders=valid_loader)"
    ]
   },
