modified to allow .zip for audio

--- a/TUTO_task_Cover_Song_Identification.ipynb
+++ b/TUTO_task_Cover_Song_Identification.ipynb
@@ -61,10 +61,12 @@
     "import torch.optim as optim\n",
     "import torchsummary\n",
     "\n",
+    "! pip install lightning\n",
     "import lightning.pytorch as pl\n",
     "from lightning.pytorch.callbacks import Callback\n",
     "from lightning.pytorch.callbacks import EarlyStopping, ModelCheckpoint\n",
     "\n",
+    "! pip install wandb\n",
     "import wandb\n",
     "from pytorch_lightning.loggers import WandbLogger\n",
     "\n",
@@ -107,7 +109,8 @@
    "source": [
     "import urllib.request\n",
     "pre = 'https://drive.google.com/uc?export=download&id='\n",
-    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000_feat.hdf5', 'cover1000_feat.hdf5')\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000_feat.hdf5.zip', 'cover1000_feat.hdf5.zip')\n",
+    "! unzip ./cover1000_feat.hdf5.zip\n",
     "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000.pyjama', 'cover1000.pyjama')"
    ]
   },
