--- a/TUTO_task_Multi_Pitch_Estimation.ipynb
+++ b/TUTO_task_Multi_Pitch_Estimation.ipynb
@@ -104,7 +104,8 @@
    "source": [
     "import urllib.request\n",
     "pre = 'https://drive.google.com/uc?export=download&id='\n",
-    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/bach10_audio.hdf5', 'bach10_audio.hdf5')\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/bach10_audio.hdf5.zip', 'bach10_audio.hdf5.zip')\n",
+    "! unzip ./bach10_audio.hdf5.zip\n",
     "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/bach10.pyjama', 'bach10.pyjama')"
    ]
   },
