--- a/TUTO_task_Auto_Tagging.ipynb
+++ b/TUTO_task_Auto_Tagging.ipynb
@@ -34,13 +34,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Requirement already satisfied: lightning in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (2.2.1)\n",
+      "Requirement already satisfied: PyYAML<8.0,>=5.4 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (6.0.1)\n",
+      "Requirement already satisfied: fsspec<2025.0,>=2022.5.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from fsspec[http]<2025.0,>=2022.5.0->lightning) (2024.2.0)\n",
+      "Requirement already satisfied: lightning-utilities<2.0,>=0.8.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (0.10.1)\n",
+      "Requirement already satisfied: numpy<3.0,>=1.17.2 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (1.24.3)\n",
+      "Requirement already satisfied: packaging<25.0,>=20.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (23.1)\n",
+      "Requirement already satisfied: torch<4.0,>=1.13.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (2.2.1)\n",
+      "Requirement already satisfied: torchmetrics<3.0,>=0.7.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (1.3.1)\n",
+      "Requirement already satisfied: tqdm<6.0,>=4.57.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (4.65.0)\n",
+      "Requirement already satisfied: typing-extensions<6.0,>=4.4.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (4.10.0)\n",
+      "Requirement already satisfied: pytorch-lightning in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning) (2.2.1)\n",
+      "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from fsspec[http]<2025.0,>=2022.5.0->lightning) (3.9.3)\n",
+      "Requirement already satisfied: setuptools in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from lightning-utilities<2.0,>=0.8.0->lightning) (68.2.2)\n",
+      "Requirement already satisfied: filelock in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (3.13.1)\n",
+      "Requirement already satisfied: sympy in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (1.12)\n",
+      "Requirement already satisfied: networkx in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (3.1)\n",
+      "Requirement already satisfied: jinja2 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (3.1.3)\n",
+      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.1.105 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.1.105 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.1.105 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (12.1.105)\n",
+      "Requirement already satisfied: nvidia-cudnn-cu12==8.9.2.26 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (8.9.2.26)\n",
+      "Requirement already satisfied: nvidia-cublas-cu12==12.1.3.1 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (12.1.3.1)\n",
+      "Requirement already satisfied: nvidia-cufft-cu12==11.0.2.54 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (11.0.2.54)\n",
+      "Requirement already satisfied: nvidia-curand-cu12==10.3.2.106 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (10.3.2.106)\n",
+      "Requirement already satisfied: nvidia-cusolver-cu12==11.4.5.107 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (11.4.5.107)\n",
+      "Requirement already satisfied: nvidia-cusparse-cu12==12.1.0.106 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (12.1.0.106)\n",
+      "Requirement already satisfied: nvidia-nccl-cu12==2.19.3 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (2.19.3)\n",
+      "Requirement already satisfied: nvidia-nvtx-cu12==12.1.105 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (12.1.105)\n",
+      "Requirement already satisfied: triton==2.2.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from torch<4.0,>=1.13.0->lightning) (2.2.0)\n",
+      "Requirement already satisfied: nvidia-nvjitlink-cu12 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from nvidia-cusolver-cu12==11.4.5.107->torch<4.0,>=1.13.0->lightning) (12.4.99)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>=2022.5.0->lightning) (1.3.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>=2022.5.0->lightning) (23.2.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>=2022.5.0->lightning) (1.4.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>=2022.5.0->lightning) (6.0.5)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>=2022.5.0->lightning) (1.9.4)\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>=2022.5.0->lightning) (4.0.3)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from jinja2->torch<4.0,>=1.13.0->lightning) (2.1.5)\n",
+      "Requirement already satisfied: mpmath>=0.19 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from sympy->torch<4.0,>=1.13.0->lightning) (1.3.0)\n",
+      "Requirement already satisfied: idna>=2.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from yarl<2.0,>=1.0->aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>=2022.5.0->lightning) (3.6)\n",
+      "Requirement already satisfied: wandb in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (0.16.4)\n",
+      "Requirement already satisfied: Click!=8.0.0,>=7.1 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (8.1.7)\n",
+      "Requirement already satisfied: GitPython!=3.1.29,>=1.0.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (3.1.42)\n",
+      "Requirement already satisfied: requests<3,>=2.0.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (2.31.0)\n",
+      "Requirement already satisfied: psutil>=5.0.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (5.9.8)\n",
+      "Requirement already satisfied: sentry-sdk>=1.0.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (1.41.0)\n",
+      "Requirement already satisfied: docker-pycreds>=0.4.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (0.4.0)\n",
+      "Requirement already satisfied: PyYAML in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (6.0.1)\n",
+      "Requirement already satisfied: setproctitle in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (1.3.3)\n",
+      "Requirement already satisfied: setuptools in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (68.2.2)\n",
+      "Requirement already satisfied: appdirs>=1.4.3 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (1.4.4)\n",
+      "Requirement already satisfied: typing-extensions in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (4.10.0)\n",
+      "Requirement already satisfied: protobuf!=4.21.0,<5,>=3.12.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from wandb) (4.25.3)\n",
+      "Requirement already satisfied: six>=1.4.0 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from docker-pycreds>=0.4.0->wandb) (1.16.0)\n",
+      "Requirement already satisfied: gitdb<5,>=4.0.1 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from GitPython!=3.1.29,>=1.0.0->wandb) (4.0.11)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from requests<3,>=2.0.0->wandb) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from requests<3,>=2.0.0->wandb) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from requests<3,>=2.0.0->wandb) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from requests<3,>=2.0.0->wandb) (2024.2.2)\n",
+      "Requirement already satisfied: smmap<6,>=3.0.1 in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (from gitdb<5,>=4.0.1->GitPython!=3.1.29,>=1.0.0->wandb) (5.0.1)\n",
       "Requirement already satisfied: munch in /home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages (4.0.0)\n"
      ]
     }
@@ -54,13 +113,12 @@
     "import torch.optim as optim\n",
     "import torchsummary\n",
     "\n",
-    "import lightning.pytorch as pl\n",
-    "import torch.optim as optim\n",
-    "\n",
+    "! pip install lightning\n",
     "import lightning.pytorch as pl\n",
     "from lightning.pytorch.callbacks import Callback\n",
     "from lightning.pytorch.callbacks import EarlyStopping, ModelCheckpoint\n",
     "\n",
+    "! pip install wandb\n",
     "import wandb\n",
     "from pytorch_lightning.loggers import WandbLogger\n",
     "\n",
@@ -98,19 +156,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  ./gtzan-genre_audio.hdf5.zip\n",
+      "  inflating: gtzan-genre_audio.hdf5  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('genre.pyjama', <http.client.HTTPMessage at 0x7fee386f88b0>)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import urllib.request\n",
     "pre = 'https://drive.google.com/uc?export=download&id='\n",
-    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/gtzan-genre_audio.hdf5', 'gtzan-genre_audio.hdf5')\n",
-    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/gtzan-genre.pyjama', 'genre.pyjama')"
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/gtzan-genre_audio.hdf5.zip', 'gtzan-genre_audio.hdf5.zip')\n",
+    "! unzip ./gtzan-genre_audio.hdf5.zip\n",
+    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/gtzan-genre.pyjama', 'gtzan-genre.pyjama')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
