--- a/TUTO_task_Multi_Pitch_Estimation.ipynb
+++ b/TUTO_task_Multi_Pitch_Estimation.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +66,7 @@
     "import librosa\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import feature\n",
     "\n",
     "# -----------------------------\n",
     "import model_factory \n",
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,13 +116,6 @@
     "hdf5_audio_file = f'{ROOT}/{base}_audio.hdf5'\n",
     "hdf5_feat_file = f'{ROOT}/{base}_feat.hdf5'\n",
     "pyjama_annot_file = f'{ROOT}/{base}.pyjama'\n",
-    "\n",
-    "param_feature = Namespace()\n",
-    "param_feature.tmp_dir = './_pitch_feature/'\n",
-    "\n",
-    "#param_feature.h_l = [1] # --- CQT\n",
-    "param_feature.h_l = [0.5, 1, 2, 3, 4, 5] # --- HCQT\n",
-    "    \n",
     "\n",
     "param_patch = Namespace()\n",
     "param_patch.L_frame = 64\n",
@@ -157,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,35 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f_get_hcqt(audio_v, sr_hz):\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    BINS_PER_SEMITONE = 5\n",
-    "    BINS_PER_OCTAVE = 12 * BINS_PER_SEMITONE\n",
-    "    N_OCTAVES = 6\n",
-    "    N_BINS = N_OCTAVES * BINS_PER_OCTAVE\n",
-    "    FMIN = 32.7\n",
-    "    HOP_LENGTH = 512\n",
-    "    \n",
-    "    for idx, h in enumerate(param_feature.h_l):\n",
-    "        A_m = np.abs(librosa.cqt(y=audio_v, sr=sr_hz, fmin=h*32.7, hop_length=HOP_LENGTH, bins_per_octave=BINS_PER_OCTAVE, n_bins=N_BINS))\n",
-    "        if idx==0: CQT_3m = np.zeros((len(param_feature.h_l), A_m.shape[0], A_m.shape[1]))\n",
-    "        CQT_3m[idx,:,:] = A_m\n",
-    "    \n",
-    "    n_times = CQT_3m.shape[2]\n",
-    "    cqt_time_sec_v = librosa.frames_to_time(np.arange(n_times), sr=sr_hz, hop_length=HOP_LENGTH)\n",
-    "    cqt_frequency_hz_v = librosa.cqt_frequencies(n_bins=N_BINS, fmin=FMIN, bins_per_octave=BINS_PER_OCTAVE)\n",
-    "\n",
-    "    return CQT_3m, cqt_time_sec_v, cqt_frequency_hz_v"
+    "param_hcqt = Namespace()\n",
+    "param_hcqt.tmp_dir = './_pitch_feature/'\n",
+    "#param_hcqt.h_l = [1] # --- CQT\n",
+    "param_hcqt.h_l = [0.5, 1, 2, 3, 4, 5] # --- HCQT\n",
+    "BINS_PER_SEMITONE = 5\n",
+    "N_OCTAVES = 6\n",
+    "param_hcqt.BINS_PER_OCTAVE = 12 * BINS_PER_SEMITONE\n",
+    "param_hcqt.N_BINS = N_OCTAVES * param_hcqt.BINS_PER_OCTAVE\n",
+    "param_hcqt.FMIN = 32.7\n",
+    "param_hcqt.HOP_LENGTH = 512\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -248,8 +232,11 @@
    ],
    "source": [
     "# --- TEST\n",
+    "idx_file = 0\n",
     "with h5py.File(hdf5_audio_file, 'r') as hdf5_fid:\n",
-    "    CQT_3m, cqt_time_sec_v, cqt_frequency_hz_v = f_get_hcqt(hdf5_fid[audiofile_l[0]][:], hdf5_fid[audiofile_l[0]].attrs['sr_hz'])\n",
+    "    audio_v = hdf5_fid[audiofile_l[idx_file]][:]\n",
+    "    sr_hz = hdf5_fid[audiofile_l[idx_file]].attrs['sr_hz']\n",
+    "CQT_3m, cqt_time_sec_v, cqt_frequency_hz_v = feature.f_get_hcqt(audio_v, sr_hz, param_hcqt)\n",
     "print(f'{CQT_3m.shape} {cqt_frequency_hz_v[0], cqt_frequency_hz_v[-1]}')"
    ]
   },
@@ -262,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:03<00:00, 14.42it/s]\n"
+      "100%|██████████| 50/50 [00:01<00:00, 30.69it/s]\n"
      ]
     }
    ],
@@ -287,10 +274,10 @@
     "    with h5py.File(hdf5_audio_file, 'r') as audio_fid:\n",
     "        audio_value_v = audio_fid[audio_file][:]\n",
     "        audio_sr_hz = audio_fid[audio_file].attrs['sr_hz']\n",
-    "        cqt_value_3m, cqt_time_sec_v, cqt_frequency_hz_v = f_get_hcqt(audio_value_v, audio_sr_hz)\n",
-    "        if not os.path.exists(param_feature.tmp_dir):\n",
-    "            os.makedirs(param_feature.tmp_dir)\n",
-    "        np.savez(f\"{param_feature.tmp_dir}/{audio_file}.npz\", cqt_value_3m=cqt_value_3m, cqt_time_sec_v=cqt_time_sec_v, cqt_frequency_hz_v=cqt_frequency_hz_v)\n",
+    "        cqt_value_3m, cqt_time_sec_v, cqt_frequency_hz_v = feature.f_get_hcqt(audio_value_v, audio_sr_hz, param_hcqt)\n",
+    "        if not os.path.exists(param_hcqt.tmp_dir):\n",
+    "            os.makedirs(param_hcqt.tmp_dir)\n",
+    "        np.savez(f\"{param_hcqt.tmp_dir}/{audio_file}.npz\", cqt_value_3m=cqt_value_3m, cqt_time_sec_v=cqt_time_sec_v, cqt_frequency_hz_v=cqt_frequency_hz_v)\n",
     "\n",
     "with h5py.File(hdf5_audio_file, 'r') as hdf5_fid:\n",
     "    audio_file_l = [audio_file for audio_file in hdf5_fid['/'].keys()]\n",
@@ -300,7 +287,7 @@
     "\n",
     "with h5py.File(hdf5_feat_file, 'w') as feat_fid:\n",
     "    for audio_file in tqdm(audio_file_l):\n",
-    "        data = np.load(f\"{param_feature.tmp_dir}/{audio_file}.npz\")\n",
+    "        data = np.load(f\"{param_hcqt.tmp_dir}/{audio_file}.npz\")\n",
     "        feat_fid['/' + audio_file + '/cqt_value_3m/'] = data['cqt_value_3m']\n",
     "        feat_fid['/' + audio_file + '/cqt_time_sec_v/'] = data['cqt_time_sec_v']\n",
     "        feat_fid['/' + audio_file + '/cqt_frequency_hz_v/'] = data['cqt_frequency_hz_v']"
@@ -308,24 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f_get_patches(T, L, S):\n",
-    "    \"\"\"\n",
-    "    description\n",
-    "    \"\"\"\n",
-    "    # --- param_patch.L_frame+(nb_patch-1)*param_patch.STEP_frame < nb_frame\n",
-    "    nb_patch = int(np.floor((T - L)/S + 1))\n",
-    "    return [{'start_frame': (num_patch*S), 'end_frame': (num_patch*S)+L} for num_patch in range(nb_patch)]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250 64 32\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -337,14 +316,14 @@
        " {'start_frame': 160, 'end_frame': 224}]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# --- TEST\n",
-    "f_get_patches(250, param_patch.L_frame, param_patch.STEP_frame)"
+    "feature.f_get_patches(T=250, L=64, S=32)"
    ]
   },
   {
@@ -363,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -426,14 +405,14 @@
     "entry = data_d['collection']['entry'][idx_file]\n",
     "\n",
     "cqt_d = Namespace()\n",
-    "cqt_d.value_3m, cqt_d.time_sec_v, cqt_d.frequency_hz_v = f_get_hcqt(audio_v, sr_hz)\n",
+    "cqt_d.value_3m, cqt_d.time_sec_v, cqt_d.frequency_hz_v = feature.f_get_hcqt(audio_v, sr_hz, param_hcqt)\n",
     "cqt_d.f0_value_m = f_map_annot_frame_based(cqt_d.time_sec_v, cqt_d.frequency_hz_v, entry['f0multi'])\n",
     "\n",
     "# -------------------------------\n",
     "plt.figure(figsize=(12,8));\n",
     "D=1/2\n",
     "plt.subplot(111); \n",
-    "plt.imshow(flog(cqt_d.value_3m[param_feature.h_l.index(1),:,:]), aspect='auto', origin='lower', interpolation='none', extent=[cqt_d.time_sec_v[0], cqt_d.time_sec_v[-1], 0-D, len(cqt_d.frequency_hz_v)-D]);\n",
+    "plt.imshow(flog(cqt_d.value_3m[param_hcqt.h_l.index(1),:,:]), aspect='auto', origin='lower', interpolation='none', extent=[cqt_d.time_sec_v[0], cqt_d.time_sec_v[-1], 0-D, len(cqt_d.frequency_hz_v)-D]);\n",
     "plt.imshow(flog(cqt_d.f0_value_m), aspect='auto', cmap='Reds', origin='lower', interpolation='none', extent=[cqt_d.time_sec_v[0], cqt_d.time_sec_v[-1], 0-D, len(cqt_d.frequency_hz_v)-D], alpha=0.4);\n",
     "plt.colorbar();\n",
     "# -------------------------------"
@@ -490,14 +469,14 @@
     "print(entry)\n",
     "\n",
     "cqt_d = Namespace()\n",
-    "cqt_d.value_3m, cqt_d.time_sec_v, cqt_d.frequency_hz_v = f_get_hcqt(audio_v, sr_hz)\n",
+    "cqt_d.value_3m, cqt_d.time_sec_v, cqt_d.frequency_hz_v = feature.f_get_hcqt(audio_v, sr_hz, param_hcqt)\n",
     "cqt_d.f0_value_m = f_map_annot_segment_based(cqt_d.time_sec_v, cqt_d.frequency_hz_v, entry['pitchmidi'])\n",
     "\n",
     "# -------------------------------\n",
     "plt.figure(figsize=(12,8));\n",
     "D=1/2\n",
     "plt.subplot(111); \n",
-    "plt.imshow(flog(cqt_d.value_3m[param_feature.h_l.index(1),:,:]), aspect='auto', cmap='gray_r', origin='lower', interpolation='none', extent=[cqt_d.time_sec_v[0], cqt_d.time_sec_v[-1], 0-D, len(cqt_d.frequency_hz_v)-D]);\n",
+    "plt.imshow(flog(cqt_d.value_3m[param_hcqt.h_l.index(1),:,:]), aspect='auto', cmap='gray_r', origin='lower', interpolation='none', extent=[cqt_d.time_sec_v[0], cqt_d.time_sec_v[-1], 0-D, len(cqt_d.frequency_hz_v)-D]);\n",
     "plt.imshow(flog(cqt_d.f0_value_m), aspect='auto', cmap='Reds', origin='lower', interpolation='none', extent=[cqt_d.time_sec_v[0], cqt_d.time_sec_v[-1], 0-D, len(cqt_d.frequency_hz_v)-D], alpha=0.5);\n",
     "plt.colorbar();\n",
     "plt.xlim((400,410))\n",
@@ -513,9 +492,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1746 64 32\n",
+      "1093 64 32\n",
+      "1795 64 32\n",
+      "1543 64 32\n",
+      "1403 64 32\n",
+      "1432 64 32\n",
+      "1265 64 32\n",
+      "1611 64 32\n",
+      "1087 64 32\n",
+      "1434 64 32\n"
+     ]
+    }
+   ],
    "source": [
     "class PitchDataset(Dataset):\n",
     "    \"\"\"\n",
@@ -560,7 +556,7 @@
     "\n",
     "                self.feature_d[audio_d.file] = {'X': torch.tensor(cqt_d.value_3m).float(), 'y': torch.tensor(cqt_d.f0_value_m)}\n",
     "                \n",
-    "                localpatch_l = f_get_patches(cqt_d.value_3m.shape[2], param_patch.L_frame, param_patch.STEP_frame)\n",
+    "                localpatch_l = feature.f_get_patches(cqt_d.value_3m.shape[2], param_patch.L_frame, param_patch.STEP_frame)\n",
     "                for localpatch in localpatch_l:\n",
     "                    self.patch_l.append({'audiofile': audio_d.file,\n",
     "                                        'start_frame': localpatch['start_frame'],\n",
@@ -584,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +608,7 @@
     "print(len(valid_dataset))\n",
     "\n",
     "idx_path = 51\n",
-    "plt.subplot(121); plt.imshow(flog(train_dataset[idx_path]['X'][param_feature.h_l.index(1),:,:]).numpy(), aspect='auto', origin='lower', interpolation='none', );\n",
+    "plt.subplot(121); plt.imshow(flog(train_dataset[idx_path]['X'][param_hcqt.h_l.index(1),:,:]).numpy(), aspect='auto', origin='lower', interpolation='none', );\n",
     "plt.subplot(122); plt.imshow(train_dataset[idx_path]['y'][:,:].numpy(), aspect='auto', origin='lower', interpolation='none', );"
    ]
   },
@@ -625,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,14 +696,14 @@
     "                if do_verbose: print(f'> out: {X.size()}')\n",
     "        return X\n",
     "\n",
-    "m, C, H, T = 32, len(param_feature.h_l), 360, 64\n",
+    "m, C, H, T = 32, len(param_hcqt.h_l), 360, 64\n",
     "model = BittnerNetModel(config, [m, C, H, T])\n",
     "model = model.to(param_model.device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -760,6 +756,14 @@
       "Params size (MB): 1.97\n",
       "Estimated Total Size (MB): 491.70\n",
       "----------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ids/gpeeters/anaconda3/envs/conda_gpeeters_2024/lib/python3.8/site-packages/torch/nn/modules/conv.py:456: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at ../aten/src/ATen/native/Convolution.cpp:1040.)\n",
+      "  return F.conv2d(input, weight, bias, self.stride,\n"
      ]
     }
    ],
@@ -835,7 +839,7 @@
     "        \n",
     "        return Xd_l[idx_d+1]\n",
     "\n",
-    "m, C, H, T = 32, len(param_feature.h_l), 360, 64\n",
+    "m, C, H, T = 32, len(param_hcqt.h_l), 360, 64\n",
     "model = DorasNetModel(config, [m, C, H, T])\n",
     "model = model.to(param_model.device)"
    ]
@@ -941,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
