--- a/TUTO_task_Cover_Song_Identification.ipynb
+++ b/TUTO_task_Cover_Song_Identification.ipynb
@@ -61,12 +61,12 @@
     "import torch.optim as optim\n",
     "import torchsummary\n",
     "\n",
-    "! pip install lightning\n",
+    "! pip install lightning --quiet\n",
     "import lightning.pytorch as pl\n",
     "from lightning.pytorch.callbacks import Callback\n",
     "from lightning.pytorch.callbacks import EarlyStopping, ModelCheckpoint\n",
     "\n",
-    "! pip install wandb\n",
+    "! pip install wandb --quiet\n",
     "import wandb\n",
     "from pytorch_lightning.loggers import WandbLogger\n",
     "\n",
