--- a/TUTO_task_Multi_Pitch_Estimation.ipynb
+++ b/TUTO_task_Multi_Pitch_Estimation.ipynb
@@ -625,8 +625,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=param_model.batch_size, shuffle=True, num_workers=9)\n",
-    "valid_loader = torch.utils.data.DataLoader(valid_dataset, batch_size=param_model.batch_size, shuffle=False, num_workers=9)"
+    "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=param_model.batch_size, shuffle=True, num_workers=9)\n",
+    "valid_dataloader = torch.utils.data.DataLoader(valid_dataset, batch_size=param_model.batch_size, shuffle=False, num_workers=9)"
    ]
   },
   {
@@ -645,8 +645,8 @@
    ],
    "source": [
     "# --- TEST\n",
-    "print(next(iter(train_loader))['X'].size())\n",
-    "print(next(iter(train_loader))['y'].size())"
+    "print(next(iter(train_dataloader))['X'].size())\n",
+    "print(next(iter(train_dataloader))['y'].size())"
    ]
   },
   {
@@ -880,7 +880,7 @@
     }
    ],
    "source": [
-    "batch = next(iter(train_loader))\n",
+    "batch = next(iter(train_dataloader))\n",
     "X = batch['X'].to(param_model.device)\n",
     "y = batch['y'].to(param_model.device)\n",
     "hat_y = model(X)\n",
@@ -1740,7 +1740,7 @@
     "checkpoint_callback = ModelCheckpoint(monitor='valid_loss', dirpath=param_lightning.dirpath, filename=param_lightning.filename, save_top_k=1, mode='min')\n",
     "#trainer = pl.Trainer(accelerator=\"gpu\",  logger = wandb_logger, max_epochs = param_lightning.max_epochs, callbacks = [early_stop_callback, checkpoint_callback])\n",
     "trainer = pl.Trainer(accelerator=\"gpu\",  max_epochs = param_lightning.max_epochs, callbacks = [early_stop_callback, checkpoint_callback])\n",
-    "trainer.fit(model=my_lighting, train_dataloaders=train_loader, val_dataloaders=valid_loader)"
+    "trainer.fit(model=my_lighting, train_dataloaders=train_dataloader, val_dataloaders=valid_dataloader)"
    ]
   },
   {
