--- a/TUTO_task_Cover_Song_Identification.ipynb
+++ b/TUTO_task_Cover_Song_Identification.ipynb
@@ -6,19 +6,19 @@
    "source": [
     "# Tutorial Cover-Song-Identification based on Triplet-Loss\n",
     "\n",
-    "- date: 2024-10-01\n",
+    "- date: 2024-10-10\n",
     "- author: geoffroy.peeters@telecom-paris.fr\n",
+    "\n",
+    "This notebook was created for the tutorial held at ISMIR-2024 \"Deep-Learning 101 for Audio-based Music Information Retrieval\".\n",
+    "It illustrates the use of various deep-learning bricks to solve the task of \"Cover-Song-Identification\".\n",
+    "\n",
+    "Part of the code is based on \n",
+    "- MOVE model: https://github.com/furkanyesiler/move\n",
+    "- EVALUATION: https://gist.github.com/bwhite/3726239\n",
     "\n",
     "Datasets are available at\n",
     "- Cover-1000 https://www.covers1000.net/dataset.html\n",
-    "- DA-TACOS https://github.com/MTG/da-tacos \n",
-    "\n",
-    "The code of the model is based on MOVE \n",
-    "- Paper: https://arxiv.org/pdf/1910.12551 \n",
-    "- Code: https://github.com/furkanyesiler/move\n",
-    "\n",
-    "The code for evaluation is based on\n",
-    "- https://gist.github.com/bwhite/3726239"
+    "- DA-TACOS https://github.com/MTG/da-tacos "
    ]
   },
   {
@@ -27,9 +27,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/geoffroypeeters/DL101forMIR_notebook.git\n",
-    "%cd DL101forMIR_notebook\n",
-    "!ls"
+    "do_deploy = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if do_deploy:\n",
+    "    !git clone https://github.com/geoffroypeeters/DL101forMIR_notebook.git\n",
+    "    %cd DL101forMIR_notebook\n",
+    "    !ls"
    ]
   },
   {
@@ -90,7 +100,7 @@
     "importlib.reload(model_factory) \n",
     "\n",
     "from argparse import Namespace\n",
-    "! pip install munch\n",
+    "! pip install munch --quiet\n",
     "from munch import munchify"
    ]
   },
@@ -107,11 +117,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib.request\n",
-    "pre = 'https://drive.google.com/uc?export=download&id='\n",
-    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000_feat.hdf5.zip', 'cover1000_feat.hdf5.zip')\n",
-    "! unzip ./cover1000_feat.hdf5.zip\n",
-    "urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000.pyjama', 'cover1000.pyjama')"
+    "if do_deploy:\n",
+    "    import urllib.request\n",
+    "    pre = 'https://drive.google.com/uc?export=download&id='\n",
+    "    urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000_feat.hdf5.zip', 'cover1000_feat.hdf5.zip')\n",
+    "    ! unzip ./cover1000_feat.hdf5.zip\n",
+    "    urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000.pyjama', 'cover1000.pyjama')"
    ]
   },
   {
@@ -120,11 +131,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
-    "ROOT = './'\n",
+    "if do_deploy:\n",
+    "    ROOT = './'\n",
+    "else:\n",
+    "    ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
     "\n",
     "base = 'cover1000'\n",
     "#base = 'datacos-benchmark'\n",
+    "\n",
     "hdf5_feat_file = f'{ROOT}/{base}_feat.hdf5'\n",
     "pyjama_annot_file = f'{ROOT}/{base}.pyjama'\n",
     "\n",
