added new datasets

--- a/TUTO_task_Cover_Song_Identification.ipynb
+++ b/TUTO_task_Cover_Song_Identification.ipynb
@@ -119,10 +119,21 @@
    "source": [
     "if do_deploy:\n",
     "    import urllib.request\n",
-    "    pre = 'https://drive.google.com/uc?export=download&id='\n",
-    "    urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000_feat.hdf5.zip', 'cover1000_feat.hdf5.zip')\n",
-    "    ! unzip ./cover1000_feat.hdf5.zip\n",
-    "    urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/cover1000.pyjama', 'cover1000.pyjama')"
+    "    import shutil    \n",
+    "    ROOT = 'https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/'\n",
+    "\n",
+    "    hdf5_feat_file, pyjama_annot_file = 'cover1000_feat.hdf5.zip', 'cover1000.pyjama'\n",
+    "    #hdf5_feat_file, pyjama_annot_file = 'datacos-benchmark_feat.hdf5.zip', 'datacos-benchmark.pyjama'\n",
+    "    \n",
+    "    urllib.request.urlretrieve(ROOT + hdf5_feat_file, hdf5_feat_file)\n",
+    "    if hdf5_feat_file.endswith('.zip'): shutil.unpack_archive(hdf5_feat_file, './')\n",
+    "    urllib.request.urlretrieve(ROOT + pyjama_annot_file, pyjama_annot_file)\n",
+    "\n",
+    "    ROOT = './'\n",
+    "\n",
+    "else: \n",
+    "\n",
+    "    ROOT = '/tsi/data_doctorants/gpeeters/_data/'"
    ]
   },
   {
@@ -131,11 +142,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if do_deploy:\n",
-    "    ROOT = './'\n",
-    "else:\n",
-    "    ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
-    "\n",
     "base = 'cover1000'\n",
     "#base = 'datacos-benchmark'\n",
     "\n",
