--- a/TUTO_task_Multi_Pitch_Estimation.ipynb
+++ b/TUTO_task_Multi_Pitch_Estimation.ipynb
@@ -111,10 +111,21 @@
    "source": [
     "if do_deploy:\n",
     "    import urllib.request\n",
-    "    pre = 'https://drive.google.com/uc?export=download&id='\n",
-    "    urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/bach10_audio.hdf5.zip', 'bach10_audio.hdf5.zip')\n",
-    "    ! unzip ./bach10_audio.hdf5.zip\n",
-    "    urllib.request.urlretrieve('https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/bach10.pyjama', 'bach10.pyjama')"
+    "    import shutil\n",
+    "    ROOT = 'https://perso.telecom-paristech.fr/gpeeters/tuto_DL101forMIR/'\n",
+    "    \n",
+    "    #hdf5_audio_file, pyjama_annot_file = 'bach10_audio.hdf5.zip', 'bach10.pyjama'\n",
+    "    hdf5_audio_file, file_annot = 'maps_audio.hdf5.zip', 'maps.pyjama'\n",
+    "    \n",
+    "    urllib.request.urlretrieve(ROOT + hdf5_audio_file, hdf5_audio_file)\n",
+    "    if hdf5_audio_file.endswith('.zip'): shutil.unpack_archive(hdf5_audio_file, './')\n",
+    "    urllib.request.urlretrieve(ROOT + pyjama_annot_file, pyjama_annot_file)\n",
+    "\n",
+    "    ROOT = './'\n",
+    "\n",
+    "else:\n",
+    "\n",
+    "    ROOT = '/tsi/data_doctorants/gpeeters/_data/'"
    ]
   },
   {
@@ -123,9 +134,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if do_deploy:   ROOT = './'\n",
-    "else:           ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
-    "\n",
     "#base, do_f0_annot = 'bach10', 'frame'\n",
     "base, do_f0_annot = 'maps', 'segment'\n",
     "\n",
