added fixed seed, added expe**

--- a/TUTO_task_Auto_Tagging.ipynb
+++ b/TUTO_task_Auto_Tagging.ipynb
@@ -77,6 +77,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Set fixed seed for reproducibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "seed = 42\n",
+    "torch.manual_seed(seed)         # For CPU\n",
+    "random.seed(seed)               # For Python's built-in random module\n",
+    "np.random.seed(seed)            # For NumPy\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed(seed)          # For current GPU\n",
+    "    torch.cuda.manual_seed_all(seed) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import packages"
    ]
   },
