--- a/TUTO_task_Cover_Song_Identification.ipynb
+++ b/TUTO_task_Cover_Song_Identification.ipynb
@@ -128,6 +128,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Set fixed seed for reproducibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[1;32m      2\u001b[0m seed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m42\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39mmanual_seed(seed)         \u001b[38;5;66;03m# For CPU\u001b[39;00m\n\u001b[1;32m      4\u001b[0m random\u001b[38;5;241m.\u001b[39mseed(seed)               \u001b[38;5;66;03m# For Python's built-in random module\u001b[39;00m\n\u001b[1;32m      5\u001b[0m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mseed(seed)            \u001b[38;5;66;03m# For NumPy\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "seed = 42\n",
+    "torch.manual_seed(seed)         # For CPU\n",
+    "random.seed(seed)               # For Python's built-in random module\n",
+    "np.random.seed(seed)            # For NumPy\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed(seed)          # For current GPU\n",
+    "    torch.cuda.manual_seed_all(seed) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Parameters"
    ]
   },
