added fixed seed, added expe**

--- a/TUTO_task_Cover_Song_Identification_01.ipynb
+++ b/TUTO_task_Cover_Song_Identification_01.ipynb
@@ -66,8 +66,8 @@
     "\n",
     "    ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
     "\n",
-    "#base = 'cover1000'\n",
-    "base = 'datacos-benchmark'\n",
+    "base = 'cover1000'\n",
+    "#base = 'datacos-benchmark'\n",
     "config_file = 'config_cover.yaml'"
    ]
   },
