updated diffusion model generation notebook

--- a/TUTO_task_Generation_Diffusion.ipynb
+++ b/TUTO_task_Generation_Diffusion.ipynb
@@ -5,7 +5,7 @@
    "outputs": [],
    "source": [
     "# Install necessary libraries (run this cell first)\n",
-    "!pip install music2latent torch librosa soundfile"
+    "!pip install music2latent soundfile"
    ],
    "metadata": {
     "collapsed": false
@@ -26,12 +26,36 @@
     "from music2latent import EncoderDecoder\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import scipy.signal"
+    "import scipy.signal\n",
+    "import IPython.display as ipd"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "970f5b0951955d35"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "## Download NSYNTH_GUITAR_MP3 dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "16b19e781edbdaaa"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/SonyCSLParis/test-lfs.git\n",
+    "!bash ./test-lfs/download.sh NSYNTH_GUITAR_MP3"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bd7b0ad6a6959b4a"
   },
   {
    "cell_type": "code",
@@ -299,8 +323,8 @@
     "encdec = EncoderDecoder()\n",
     "\n",
     "# Initialize the dataset and dataloader\n",
-    "audio_folder_train = \"./NSYNTH/nsynth-train\"\n",
-    "audio_folder_val = \"./NSYNTH/nsynth-valid\"\n",
+    "audio_folder_train = \"./NSYNTH_GUITAR_MP3/nsynth-guitar-train\"\n",
+    "audio_folder_val = \"./NSYNTH_GUITAR_MP3/nsynth-guitar-valid\"\n",
     "\n",
     "dataset = MusicLatentDataset(root_dir=audio_folder_train, encoder=encdec)\n",
     "dataloader = DataLoader(dataset, batch_size=500, shuffle=True)\n",
@@ -321,12 +345,7 @@
     "# Initialize the model\n",
     "in_channels = 64  # latent dimension\n",
     "out_channels = 64  # output dimension\n",
-    "model = DiffusionUnet(in_channels, out_channels, num_layers=5).cuda()\n",
-    "# torch.Size([1, 128, 16])\n",
-    "# torch.Size([1, 256, 8])\n",
-    "# torch.Size([1, 512, 4])\n",
-    "# torch.Size([1, 1024, 2])\n",
-    "# torch.Size([1, 2048, 1])"
+    "model = DiffusionUnet(in_channels, out_channels, num_layers=5).cuda()"
    ],
    "metadata": {
     "collapsed": false
@@ -434,6 +453,21 @@
     "collapsed": false
    },
    "id": "dd2a1ae0193150ed"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Use IPython audio player to play generated audio samples.\n",
+    "for i in range(1, num_samples + 1):\n",
+    "    output_filename = f'generated_audio/sample_{i}.wav'\n",
+    "    print(f\"Playing {output_filename}\")\n",
+    "    ipd.display(ipd.Audio(output_filename))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f345ac0183837962"
   }
  ],
  "metadata": {
