changed chord notebook

--- a/TUTO_task_Multi_Pitch_Estimation.ipynb
+++ b/TUTO_task_Multi_Pitch_Estimation.ipynb
@@ -161,8 +161,8 @@
     "\n",
     "    ROOT = '/tsi/data_doctorants/gpeeters/_data/'\n",
     "\n",
-    "config_file = 'config_bittner.yaml'\n",
-    "#config_file = 'config_doras.yaml'\n",
+    "#config_file = 'config_bittner.yaml'\n",
+    "config_file = 'config_doras.yaml'\n",
     "\n",
     "do_wandb = False\n",
     "import pprint as pp\n",
