--- a/TUTO_Self-Supervised_Learninng.ipynb
+++ b/TUTO_Self-Supervised_Learninng.ipynb
@@ -942,23 +942,35 @@
     "\n",
     "This phenomenon is called **collapse**, and a lot of research has been about how to prevent this phenomenon to happen. In particular, the most widely technique is to use a contrastive learning. In other words, we want to have **positive pairs** that we push together, but also **negative pairs** that we push far away from each other.\n",
     "\n",
-    "![image.png](https://github.com/geoffroypeeters/deeplearning-101-audiomir_book/raw/ssl/images/ssl/5e51a5cc-b970-44f9-9ba6-7ccfc2833399.png)\n",
+    "![Negative pairs](https://github.com/geoffroypeeters/deeplearning-101-audiomir_book/raw/ssl/images/ssl/5e51a5cc-b970-44f9-9ba6-7ccfc2833399.png)\n",
     "\n",
     "*We know how to choose the positive pairs, but how to choose the negative ones?* Well, a simple yet effective is to say that everything that is not a positive pair is a negative pair. Practically speaking, since we anyway process batches of inputs, we use the other elements of a batch to create these negative pairs.\n",
     "Given a pair of two batches of size $N$, we concatenate both into a big matrix $Z = (z_1, \\dots, z_{2N}) \\in \\mathbb{R}^{2N \\times d}$. For $1 \\leq i \\leq 2N$, let $i^+$ be the index of the corresponding positive pair (i.e. $i^+ = i \\pm N$). Overall, the formula looks like this:\n",
     "\n",
-    "![image.png](https://github.com/geoffroypeeters/deeplearning-101-audiomir_book/raw/ssl/images/ssl/5f59560e-eda0-43b3-8def-6f24c39f3ff1.png)\n",
+    "![Contrastive loss](https://github.com/geoffroypeeters/deeplearning-101-audiomir_book/raw/ssl/images/ssl/5f59560e-eda0-43b3-8def-6f24c39f3ff1.png)\n",
     "\n",
     "where $\\text{sim}(z_i, z_j)$ denotes the cosine similarity between vectors $z_i$ and $z_j$ and $\\tau$ is a fixed temperature hyperparameter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "id": "tRMAn8OJG4xB"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mContrastiveLoss\u001b[39;00m(\u001b[43mnn\u001b[49m\u001b[38;5;241m.\u001b[39mModule):\n\u001b[1;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03m    A contrastive loss function designed for self-supervised learning. It computes\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m    the similarity between two sets of embeddings (z1, z2) and aims to maximize the similarity \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m        temperature (float): A scaling factor applied to the similarity scores. Defaults to 0.1.\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, temperature: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class ContrastiveLoss(nn.Module):\n",
     "    \"\"\"\n",
