colab linnk + typo

--- a/TUTO_Self-Supervised_Learninng.ipynb
+++ b/TUTO_Self-Supervised_Learninng.ipynb
@@ -52,7 +52,9 @@
    "metadata": {},
    "source": [
     "**Disclaimer:** This notebook is supposed to run in a Colab environment, and we only install minimal dependencies.\n",
-    "As in the previous notebooks, we will rely on Lightning to train our neural networks."
+    "As in the previous notebooks, we will rely on Lightning to train our neural networks.\n",
+    "\n",
+    "Here is the [Colab link](https://colab.research.google.com/drive/1lVpAKC1Tc8BRDKYnyna6IplxzpW7rdby?usp=sharing)."
    ]
   },
   {
@@ -535,7 +537,7 @@
     "\n",
     "An interesting trick to improve the generalization abilities of the learned embeddings is not to use the outputs of the last layer of the network but a previous one after training. Doing so enables the mitigation of the misalignment between the training objective and the actual downstream applications. Some French researchers named this trick Guillotine Regularization and studied it in depth in [this journal paper from Bordes et al.](https://arxiv.org/pdf/2206.13378).\n",
     "\n",
-    "In practice, we implement this trick by splitting our network in two successive parts, usually referred to as the **encoder** and the **predictor**. In our case, as often, we will use a domain-specific architecture for the encoder and a simple MLP with 2 layers for the projector."
+    "In practice, we implement this trick by splitting our network in two successive parts, usually referred to as the **encoder** and the **projector**. In our case, as often, we will use a domain-specific architecture for the encoder and a simple MLP with 2 layers for the projector."
    ]
   },
   {
@@ -954,23 +956,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "tRMAn8OJG4xB"
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mContrastiveLoss\u001b[39;00m(\u001b[43mnn\u001b[49m\u001b[38;5;241m.\u001b[39mModule):\n\u001b[1;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03m    A contrastive loss function designed for self-supervised learning. It computes\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m    the similarity between two sets of embeddings (z1, z2) and aims to maximize the similarity \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m        temperature (float): A scaling factor applied to the similarity scores. Defaults to 0.1.\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, temperature: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m):\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class ContrastiveLoss(nn.Module):\n",
     "    \"\"\"\n",
@@ -1138,7 +1128,7 @@
     "\n",
     "To evaluate SSL models, we typically combine the encoder and a linear probe. First, the encoder is frozen to prevent any further updates to its parameters. This ensures that we are evaluating the representations learned during the self-supervised phase. Next, a simple linear classifier (linear probe) is trained on top of these frozen features using labeled data. The performance of this linear probe, typically measured through metrics like accuracy, mean Average Precision (mAP), or ROC-AUC, provides an indication of the quality of the learned representations. This evaluation method effectively assesses how well the SSL model has captured useful features from the data.\n",
     "\n",
-    "![image.png](https://github.com/geoffroypeeters/deeplearning-101-audiomir_book/raw/ssl/images/ssl/c99fc9dc-3b54-4796-9339-c23415f52bff.png)\n",
+    "![Evaluation](https://github.com/geoffroypeeters/deeplearning-101-audiomir_book/raw/ssl/images/ssl/c99fc9dc-3b54-4796-9339-c23415f52bff.png)\n",
     "\n",
     "In this tutorial, we will focus on a music tagging task on a subset of MagnaTagATune. It is modeled as a multilabel classification problem.\n",
     "\n",
