--- a/TUTO_task_Cover_Song_Identification.ipynb_datacos.ipynb
+++ b/TUTO_task_Cover_Song_Identification.ipynb_datacos.ipynb
@@ -16,7 +16,7 @@
     "\taddress = {San Francisco, USA},\n",
     "\tyear = {2024},\n",
     "\tmonth = November,\n",
-    "\tdoi = {???},\n",
+    "\tdoi = {10.5281/zenodo.14049461},\n",
     "}\n",
     "```\n",
     "\n",
